--- a/DemoMvc/Views/Shared/_Layout.cshtml
+++ b/DemoMvc/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Fuentes/css")
+    @Styles.Render("~/Iconos/css")
+    @Styles.Render("~/Bootstrap/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -20,10 +20,11 @@
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <div class="navbar-brand">@Html.ActionLink("BizzCoom", "Index", "Home")</div>
-                            
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="icon-menu"></span>
-                            </button>
+                            <div class="navbar-brand">
+                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span><object data="/Imagenes/Icons/1486564398-menu2_81519.svg" width="32px" height="32px" ="image/svg+xml"></object></span>
+                                </button>
+                            </div>
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                                 <ul class="navbar-nav">
                                     <form class="form-inline">
@@ -31,7 +32,7 @@
                                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                                     </form>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Ayuda
                                             <span class="icon-arrow-down"></span>
                                         </a>
@@ -45,7 +46,7 @@
                                         </div>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Crecimiento
                                             <span class="icon-arrow-down"></span>
                                         </a>
@@ -57,7 +58,7 @@
                                         </div>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Contáctanos
                                             <span class="icon-arrow-down"></span>
                                         </a>
@@ -70,7 +71,7 @@
                                         </div>
                                     </li>
                                     <li class="nav-item">
-                                        <div class="nav-link">@Html.ActionLink("Quienes Somos", "About", "Home")</div>
+                                        <div class="text-white nav-link">@Html.ActionLink("Quienes Somos", "About", "Home", new{ CssStyleCollection="text-decoration:none;"})</div>
                                     </li>
                                     <li class="btn nav-item">
                                         @Html.Partial("_LoginPartial")
