--- a/DemoMvc/Views/Shared/_Layout.cshtml
+++ b/DemoMvc/Views/Shared/_Layout.cshtml
@@ -20,17 +20,17 @@
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <div class="navbar-brand">@Html.ActionLink("BizzCoom", "Index", "Home")</div>
+                            <form class="form-inline">
+                                <input class="form-control" type="search" placeholder="Buscar..." aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">Buscar</button>
+                            </form>
                             <div class="navbar-brand">
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span><object data="/Imagenes/Icons/1486564398-menu2_81519.svg" width="32px" height="32px" ="image/svg+xml"></object></span>
+                                    <span class="bottom-icons"></span>
                                 </button>
                             </div>
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                                 <ul class="navbar-nav">
-                                    <form class="form-inline">
-                                        <input class="form-control" type="search" placeholder="Buscar..." aria-label="Search">
-                                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                                    </form>
                                     <li class="nav-item dropdown">
                                         <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Ayuda
@@ -71,13 +71,13 @@
                                         </div>
                                     </li>
                                     <li class="nav-item">
-                                        <div class="text-white nav-link">@Html.ActionLink("Quienes Somos", "About", "Home", new{ CssStyleCollection="text-decoration:none;"})</div>
+                                        <div class="text-white nav-link">@Html.ActionLink("Quienes Somos", "About", "Home", new { CssStyleCollection = "text-decoration:none;" })</div>
                                     </li>
                                     <li class="btn nav-item">
                                         @Html.Partial("_LoginPartial")
                                     </li>
-                                    <li class="btn nav-item">                                        
-                                            @Html.ActionLink("Usuarios", "Index", "AspNetUsers")                                        
+                                    <li class="btn nav-item">
+                                        @Html.ActionLink("Usuarios", "Index", "AspNetUsers")
                                     </li>
                                 </ul>
                             </div>
