--- a/DemoMvc/Views/Shared/_Layout.cshtml
+++ b/DemoMvc/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <div class="navbar-brand">@Html.ActionLink("BizzCoom", "Index", "Home")</div>
                             <div class="navbar-brand">
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span><object data="/Imagenes/Icons/1486564398-menu2_81519.svg" width="32" height="32" type="image/svg+xml"></object></span>
+                                    <img src="https://shop.st42.fr/images/product/th-list_0053cf_256.png" width="32" height="32">
                                 </button>
                             </div>
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
